objects/Price_List__c.object
<CustomObject>
    <fields>
        <fullName>DSR_PO_Group_Email__c</fullName>
        <label>DSR PO Group Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>Price_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expedite_Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expedite Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oracle_Operating_Unit__c</fullName>
        <label>Oracle Operating Unit</label>
        <picklist>
            <picklistValues>
                <fullName>SPAU OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPEB OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPNA OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSA OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPES OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPDE OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPKR OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPCN OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPPT OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRQ OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPMLL OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSV OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPML OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPFR OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPBE OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSW OU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPGB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPNL OU</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Packaged_System_Item_ID__c</fullName>
        <description>This is the Oracle item ID used for a SmartPack &apos;PACKAGED SYSTEM&apos; line item on a Purchase Order.</description>
        <label>Packaged System Item ID</label>
        <picklist>
            <picklistValues>
                <fullName>102868</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_List_Status__c</fullName>
        <label>Price List Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_List_Type__c</fullName>
        <label>Price List Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inverters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LEASE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPAU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPGB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPNA-CVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPNA-RVAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPNL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO FR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotional_Discount_Item_Id__c</fullName>
        <label>Promotional Discount Item Id</label>
        <picklist>
            <picklistValues>
                <fullName>135176</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Credit_SMS_Item_ID__c</fullName>
        <description>This is the Oracle item ID used for a SmartPack &apos;SERVICE CREDIT SMS&apos; line item on a Purchase Order.</description>
        <label>Service Credit SMS Item ID</label>
        <picklist>
            <picklistValues>
                <fullName>110372</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Codes__c</fullName>
        <label>Shipping Codes</label>
        <picklist>
            <picklistValues>
                <fullName>McCollister-Truck-DTH LiftGate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>McCollister-Truck-DTH SunPack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McCollister-Truck-DTW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McCollister-Truck-FTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>McCollister-Truck-LTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Pick Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schenker-Truck-LTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schenker-Truck-FTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schenker-Ocean-LCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schenker-Ocean-FCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schenker-Air-Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schenker-Air-Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van Brunt-Truck-FTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van Brunt-Truck-LTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSE – Truck FTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSE – Truck LTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport Via Truck</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size (kW)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Will_Call_Fee__c</fullName>
        <label>Will Call Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Price List</label>
    <nameField>
        <label>Price List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <recordTypes>
        <fullName>EU</fullName>
        <active>true</active>
        <description>European price list</description>
        <label>EU</label>
    </recordTypes>
    <recordTypes>
        <fullName>NA</fullName>
        <active>true</active>
        <description>North America Price List</description>
        <label>NA</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>